1 August 2023: George
	- Merge #911 from natalie-reece: Exclude EDE before other EDNS options
	  when there isn't enough space.
	- For #911: Try to trim EXTRA-TEXT (and LDNS_EDE_OTHER options
	  altogether) before giving up on attaching EDE options.
	- More braces and formatting for Fix for EDNS EDE size calculation to
	  avoid future bugs.
	- Fix to use the now cached EDE, if any, for CD_bit queries.

1 August 2023: Wouter
	- Fix for EDNS EDE size calculation.

31 July 2023: George
	- Merge #790 from Tom Carpay: Add support for EDE caching in cachedb
	  and subnetcache.

31 July 2023: Wouter
	- iana portlist update.

30 July 2023: George
	- Merge #759 from Tom Carpay: Add EDE (RFC8914) caching.

28 July 2023: George
	- Fix unused variable compile warning for kernel timestamps in
	  netevent.c

21 July 2023: George
	- Merge #857 from eaglegai: fix potential memory leaks when errors
	  happen.
	- For #857: fix mixed declarations and code.
	- Merge #118 from mibere: Changed verbosity level for Redis init &
	  deinit.
	- Merge #390 from Frank Riley: Add missing callbacks to the python
	  module.
	- Cleaner failure code for callback functions in interface.i.
	- Merge #889 from borisVanhoof: Free memory in error case + remove
	  unused function.
	- For #889: use netcat-openbsd instead of netcat-traditional.
	- For #889: Account for num_detached_states before possible
	  mesh_state_delete when erroring out.

20 July 2023: George
	- Merge #909 from headshog: Numeric truncation when parsing TYPEXX and
	  CLASSXX representation.
	- For #909: Fix return values.
	- Merge #901 from Sergei Trofimovich: config: improve handling of
	  unknown modules.

20 July 2023: Wouter
	- For #909: Fix RR class comparison.

14 July 2023: George
	- More clear description of the different auth-zone behaviors on the
	  man page.

13 July 2023: George
	- Merge #880 from chipitsine: services/authzone.c: remove redundant
	  check.

11 July 2023: George