@@ -1,3 +1,7 @@
+2 August 2023: George
+	- Move a cache reply callback in worker.c closer to the cache reply
+	  generation.
+
 1 August 2023: George
 	- Merge #911 from natalie-reece: Exclude EDE before other EDNS options
 	  when there isn't enough space.
